--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,9 +9,13 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "angular": "^1.5.0",
+    "angular-resource": "^1.5.0",
+    "angular-route": "^1.5.0",
+    "angular-sanitize": "^1.5.0",
     "bootstrap": "^3.3.6",
     "express": "^4.13.4",
-    "nodemon": "~1.9.0"
+    "http": "0.0.0"
   },
   "description": ""
 }
